components/markdown/tests/snapshots/markdown__can_customise_anchor_template.snap
---
source: components/rendering/tests/markdown.rs
assertion_line: 127
expression: body

---
<h1 id="hello">Hello (in en)</h1>

