components/markdown/tests/snapshots/markdown__can_handle_heading_ids.snap
---
source: components/markdown/tests/markdown.rs
expression: body
---
<h1 id="hello-1">Hello</h1>
<h1 id="hello-2">Hello</h1>
<h1 id="l-ecologie-et-vous">L'écologie et vous</h1>
<h1 id="hello">Hello</h1>
<h1 id="hello">Hello</h1>
<h1 id="Something_else">Hello</h1>
<h1 id="workaround-for-literal">Workaround for literal {#…}</h1>
<h1 id="*matic*">Auto</h1>
<h1 id=""></h1>
<h1 id="-1"></h1>
<h1 id="about"><a href="https://getzola.org/about/">About</a></h1>
<h1 id="rust"><a rel="external" title="Rust homepage" href="https://rust-lang.org">Rust</a></h1>
<h1 id="hi"><code>hi</code></h1>
<h1 id="hi-1"><em>hi</em></h1>
<h1 id="hi-2"><strong>hi</strong></h1>
<h1 id="text-there">text <sup class="footnote-reference"><a href="#1">1</a></sup> there</h1>
<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
<p>footnote</p>
</div>
<h1 id="classes" class="bold another">Classes</h1>
