components/markdown/tests/snapshots/markdown__can_make_zola_internal_links.snap
---
source: components/markdown/tests/markdown.rs
expression: body
---
<p><a href="https://getzola.org/about/">rel link</a>
<a href="https://getzola.org/about/#cv">rel link with anchor</a>
<a rel="external" href="https://getzola.org/about/">abs link</a></p>
