components/markdown/tests/snapshots/markdown__can_use_definition_list.snap
---
source: components/markdown/tests/markdown.rs
expression: body
---
<dl>
<dt>term</dt>
<dd>definition</dd>
</dl>
