components/markdown/tests/snapshots/markdown__can_use_external_links_options-3.snap
---
source: components/rendering/tests/markdown.rs
assertion_line: 155
expression: body

---
<p><a rel="nofollow" href="https://google.com">https://google.com</a></p>

